--- a/styles.css
+++ b/styles.css
@@ -21,9 +21,8 @@ section {
 
 
 .nav-link {
-    color: #CB6D43;
+    color: #ba8a11;
     font-weight: 600;
-    font-size:48px;
 }
 
 .inicio-fundo {
